src/kubernetes/conf/sonarServices.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonar
  namespace: joy-from-dance
  labels:
    app: sonar
spec:
  replicas: 1
  serviceName: sonar
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
        env: sonar
    spec:
      containers:
      - name: sonar
        image: sonarqube:7.1
        args:
          - '-Dsonar.web.context=/'
        ports:
        - containerPort: 9000
          name: sonarqube
        resources:
          requests:
            cpu: 0.25
            memory: 1024Mi
          limits:
            cpu: 0.5
            memory: 2048Mi
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=projectjoyfromdance:europe-west3:joy-from-dance=tcp:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
        - name: sonar-cloudsql-instance-credentials
          mountPath: "/secrets/cloudsql"
          readOnly: true
        - name: sonarqube-data
          mountPath: '/opt/sonarqube/data'
        - name: sonarqube-extensions
          mountPath: '/opt/sonarqube/extensions'
      volumes:
        - name: sonar-cloudsql-instance-credentials
          secret:
            secretName: sonar-cloudsql-instance-credentials
        - name: sonarqube-data
          persistentVolumeClaim:
            claimName: sonarqube-data
        - name: sonarqube-extensions
          persistentVolumeClaim:
            claimName: sonarqube-extensions
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-service
  namespace: joy-from-dance
  labels:
    app: sonar
spec:
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: 'http-port'
  type: NodePort
  selector:
    app: sonar
