src/kubernetes/conf/joyFromDanceIngressHttp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: joy-from-dance-website-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: joy-from-dance-website-ip
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/force-ssl-redirect: "false"
  labels:
    app: joy-from-dance-website
  namespace: joy-from-dance
spec:
  rules:
    - host: joyfrom.dance
      http:
        paths:
        - backend:
            serviceName: joy-from-dance-website-service
            servicePort: 8080
    - host: rest.joyfrom.dance
      http:
        paths:
        - backend:
            serviceName: joy-from-dance-rest-service
            servicePort: 8080
